Adding maven enforcer plugin. Closes #6

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,37 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <!-- std. apache plugin to have specified rules casing the build to fail, if any of those not met -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-versions</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <!-- Specifies mvn version to be on or above version 3.6.0 -->
+                                <!-- Syntax to specify a specific version and above is : [<version>,)-->
+                                <requireMavenVersion>
+                                    <version>[3.6.0,)</version>
+                                </requireMavenVersion>
+                                <!-- Works with only java-11 -->
+                                <requireJavaVersion>
+                                    <version>11</version>
+                                </requireJavaVersion>
+                                <!-- Require not to have snapshot version of dependencies when building release builds -->
+                                <requireReleaseDeps>
+                                    <onlyWhenRelease>true</onlyWhenRelease>
+                                    <message>Release builds must not have on snapshot dependencies</message>
+                                </requireReleaseDeps>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
